Fix z-indexes

--- a/src/app.css
+++ b/src/app.css
@@ -41,6 +41,11 @@
   }
 }
 
+.tooltip::before,
+.tooltip::after {
+  z-index: 100;
+}
+
 @plugin "daisyui" {
   themes: all;
 }
